@@ -1,3 +1,9 @@
+2020-04-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR objc/94637
+	* c-parser.c (c_parser_objc_selector_arg): Handle CPP_SCOPE like
+	two CPP_COLON tokens.
+
 2020-04-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/94629
